--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <script src="p5.sound.min.js"></script>
     <script src="matter.js"></script>
     <script src="p5.play.js"></script>
-    <script src="Ground.js"></script>
-    <script src="Divisions.js"></script>
-    <script src="Particle.js"></script>
-    <script src="Plinko.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="roof.js"></script>
+    <script src="Rope.js"></script>
+    <script src="Paper.js"></script>
+    <script src="bob.js"></script>
     <meta charset="utf-8">
 
   </head>
@@ -18,6 +17,5 @@
     <script src="sketch.js"></script>
   </body>
 </html>
-
 
 
